# crossy-roads

./: LICENSE  Makefile  README.md  crossy-roads.cabal
src/: Control.hs  CrossyRoad.hs  Main.hs  View.hs
src/Models/: GameModel.hs
src/Views/: GameView.hs  MainMenuView.hs  ViewHelper.hs  gameOverView.hs  pausedView.hs
tests/: GameViewTest.hs  Test.hs
