name:                crossy-roads
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Pujika Kumar, Minh Vo, Vaishnavi Muppala, Neeharika Gonuguntla
maintainer:          m9vo@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable crossy-roads
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       CrossyRoad
                       Control
                       View
                       Models.GameModel
                       Views.GameView
                       Views.MainMenuView
                       Views.PausedView
                       Views.GameOverView
                       Views.ViewHelper

  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src,tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process, HUnit,
                       random >=1.1,
                       containers,
                       vty, 
                       brick
  other-modules:       Control
                       View
                       Models.GameModel
                       Views.GameView
                       Views.MainMenuView
                       Views.PausedView
                       Views.GameOverView
                       Views.ViewHelper
                        CrossyRoad 
                        GameViewTest